Fixed filter buttons

--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -339,23 +339,8 @@
       <!--  -->
 
       <div class="sub-header">
-        <div class="dropdown">
-          <button class="styled-btn dropdown-toggle btn-blue" type="button" id="btn-filters" data-bs-toggle="dropdown" aria-expanded="false">Filters</button>
-          <ul class="dropdown-menu btn-blue" aria-labelledby="btn-filters">
-            <li><a class="dropdown-item" href="#">Most Recent</a></li>
-            <li><a class="dropdown-item" href="#">Oldest</a></li>
-            <li><a class="dropdown-item" href="#">Upcoming due date</a></li>
-            <li><hr class="dropdown-divider" /></li>
-            <li>
-              <a class="dropdown-item" href="#">
-                <label class="form-check-label" for="flexCheckChecked">
-                  <input class="" type="checkbox" value="showClosed" id="flexCheckChecked" />
-                  Show closed
-                </label>
-              </a>
-            </li>
-          </ul>
-        </div>
+        <button class="styled-btn btn-blue text-align-center no-text-decoration" type="button" id="btn-filters">Filter for closed</button>
+
         <a type="button" id="btn-add-request" class="styled-btn btn-blue text-align-center no-text-decoration" href="office_create.html">Add Request</a>
       </div>
 
