--- a/client/src/pages/warehouse/warehouse_homepage_operator.html
+++ b/client/src/pages/warehouse/warehouse_homepage_operator.html
@@ -106,7 +106,7 @@
       }
 
       function register_clicks() {
-        $(".table-row").dblclick(function (e) {
+        $(".table-row").click(function (e) {
           make_editable($(this));
         });
 
