--- a/client/src/pages/warehouse/warehouse_homepage_director.html
+++ b/client/src/pages/warehouse/warehouse_homepage_director.html
@@ -54,6 +54,7 @@
 
           //EXPECTED COUNT
           const expected_count_requester = new Requester(function (result) {
+            console.log(result.results);
             $("#expected_count").val(result.results.N_TOT[0]);
           });
           expected_count_requester.query({
@@ -66,6 +67,7 @@
           });
           //EXPECTED GROUND COUNT
           const expected_ground_count_requester = new Requester(function (result) {
+            console.log(result.results);
             if (result.PRELEVATO) {
               let ground_count = result.results.N_TOT.reduce((x, y) => x + y);
               $("#expected_ground_count").val(ground_count);
@@ -84,11 +86,10 @@
           });
           //EXPECTED LOCATION
           const expected_location = new Requester(function (result) {
-            console.log(result.results);
             if (!(result.results.ALTEZZA[0] || result.results.CORRIDOIO[0] || result.results.TRAVERSA[0] || result.results.ZONA[0])) {
               $("#productLocation").text("No location found!");
             } else {
-              $("#productLocation").text(`${result.results.ZONA[0]} ${result.results.CORRIDOIO[0]} ${result.results.TRAVERSA[0]} ${result.results.ALTEZZA[0]}`);
+              $("#productLocation").text(`${result.results.ALTEZZA[0]} ${result.results.CORRIDOIO[0]} ${result.results.TRAVERSA[0]} ${result.results.ZONA[0]}`);
             }
           });
           expected_location.query({
