refreshed todo list and fixed small bugs in warehouse

--- a/client/src/pages/warehouse/warehouse_homepage_director.html
+++ b/client/src/pages/warehouse/warehouse_homepage_director.html
@@ -68,7 +68,8 @@
           //EXPECTED GROUND COUNT
           const expected_ground_count_requester = new Requester(function (result) {
             console.log(result.results);
-            if (result.PRELEVATO) {
+            if (result.results.PRELEVATO) {
+              //TODO risolvi @francescobilotta
               let ground_count = result.results.N_TOT.reduce((x, y) => x + y);
               $("#expected_ground_count").val(ground_count);
             } else {
