--- a/client/src/pages/warehouse/warehouse_homepage_operator.html
+++ b/client/src/pages/warehouse/warehouse_homepage_operator.html
@@ -177,13 +177,14 @@
           <div id="popup-data" class="card-section form-holder">
             <!-- Request info -->
             <div class="form-group row">
-              <label for="req_id" class="col-1 col-form-label">Request Id</label>
+              <label class="col-1 col-form-label">Request Id</label>
+<!--              <label for="req_id" class="col-1 col-form-label">Request Id</label>-->
               <div class="row col-11">
                 <div class="input-group">
                   <div class="input-group-prepend" id="request_state"></div>
-                  <input id="req_id" name="req_id" type="text" class="form-control" aria-describedby="req_idHelpBlock" required="required" readonly />
+<!--                  <input id="req_id" name="req_id" type="text" class="form-control" aria-describedby="req_idHelpBlock" required="required" readonly />-->
                 </div>
-                <span id="req_idHelpBlock" class="form-text text-muted">Assigned id to the current request</span>
+<!--                <span id="req_idHelpBlock" class="form-text text-muted">Assigned id to the current request</span>-->
               </div>
             </div>
 
