Changed product info order and updated office homepage title

--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -346,7 +346,7 @@
       <!--  -->
       <!-- Header -->
       <!--  -->
-      <div class="header weight-800" id="header">Ufficio</div>
+      <div class="header weight-800" id="header">Gestione Conteggi Ufficio</div>
 
       <!--  -->
       <!-- Sub Header -->
