--- a/client/src/pages/warehouse/warehouse_homepage_operator.html
+++ b/client/src/pages/warehouse/warehouse_homepage_operator.html
@@ -39,11 +39,7 @@
                 const today = now.getFullYear() + "-" + month + "-" + day;
                 const image_size = "40px";
                 //Format dates
-      <<<<<<< HEAD
-                var creationDate = warehouseRequestsDetails.results[0].requestDate.replace(" 00:00:00", "");
-      =======
-                let creationDate = result.results[0].requestDate.replace(" 00:00:00", "");
-      >>>>>>> 6e4afbcd8912c8e1329e12ba6cab0e58573ef46a
+                let creationDate = warehouseRequestsDetails.results[0].requestDate.replace(" 00:00:00", "");
                 creationDate = creationDate.split("-")[1] + "-" + creationDate.split("-")[2] + "-" + creationDate.split("-")[0];
                 //Product Info
                 $("#prod_code").val(warehouseRequestsDetails.results[0].productCode);
@@ -206,34 +202,34 @@
                     <span id="prod_codeHelpBlock" class="form-text text-muted">Codice assegnato al prodotto</span>
                   </div>
                 </div>
-
-                <div class="form-group col no-gutters">
-                  <label class="col-12 col-form-label" for="prod_name">Descrizione Prodotto</label>
-                  <div class="col-12">
-                    <div class="input-group">
-                      <div class="input-group-prepend">
-                        <div class="input-group-text">
-                          <i class="fa fa-archive"></i>
-                        </div>
+                  <div class="form-group col no-gutters">
+                      <label for="prod_variant" class="col-12 col-form-label">Variante Prodotto</label>
+                      <div class="col-12">
+                          <div class="input-group">
+                              <div class="input-group-prepend">
+                                  <div class="input-group-text">
+                                      <i class="fa fa-archive"></i>
+                                  </div>
+                              </div>
+                              <input id="prod_variant" name="prod_variant" type="text" class="form-control"
+                                     aria-describedby="prod_variantHelpBlock" required="required" readonly/>
+                          </div>
+                          <span id="prod_variantHelpBlock" class="form-text text-muted">Variante specifica dell'articolo selezionato</span>
                       </div>
-                      <input id="prod_variant" name="prod_variant" type="text" class="form-control" aria-describedby="prod_variantHelpBlock" required="required" readonly />
-                    </div>
-                    <span id="prod_nameHelpBlock" class="form-text text-muted">Descrizione del prodotto selezionato</span>
                   </div>
-                </div>
-
-                <div class="form-group col no-gutters">
-                  <label for="prod_variant" class="col-12 col-form-label">Variante Prodotto</label>
-                  <div class="col-12">
-                    <div class="input-group">
-                      <div class="input-group-prepend">
-                        <div class="input-group-text"><i class="fa fa-tag"></i></div>
+                  <div class="form-group col no-gutters">
+                      <label class="col-12 col-form-label" for="prod_name">Descrizione Prodotto</label>
+                      <div class="col-12">
+                          <div class="input-group">
+                              <div class="input-group-prepend">
+                                  <div class="input-group-text"><i class="fa fa-tag"></i></div>
+                              </div>
+                              <input id="prod_name" name="prod_name" type="text" class="form-control"
+                                     aria-describedby="prod_nameHelpBlock" required="required" readonly/>
+                          </div>
+                          <span id="prod_nameHelpBlock" class="form-text text-muted">Descrizione del prodotto selezionato</span>
                       </div>
-                      <input id="prod_name" name="prod_name" type="text" class="form-control" aria-describedby="prod_nameHelpBlock" required="required" readonly />
-                    </div>
-                    <span id="prod_variantHelpBlock" class="form-text text-muted">Variante specifica del prodotto selezionato</span>
                   </div>
-                </div>
               </div>
             </div>
 
