--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -206,7 +206,7 @@
             <!-- Product info -->
             <div class="row">
               <div class="row col-12">
-                <div class="form-group col no-gutters">
+                <div class="form-group col-2 no-gutters">
                   <label class="col-12 col-form-label" for="prod_code">Codice Prodotto</label>
                   <div class="col-12">
                     <div class="input-group">
@@ -219,7 +219,7 @@
                   </div>
                 </div>
 
-                <div class="form-group col no-gutters">
+                <div class="form-group col-2 no-gutters">
                   <label for="prod_variant" class="col-12 col-form-label">Variante Prodotto</label>
                   <div class="col-12">
                     <div class="input-group">
@@ -234,7 +234,7 @@
                   </div>
                 </div>
 
-                <div class="form-group col no-gutters">
+                <div class="form-group col-8 no-gutters">
                   <label class="col-12 col-form-label" for="prod_name">Descrizione Prodotto</label>
                   <div class="col-12">
                     <div class="input-group">
