--- a/client/src/pages/warehouse/warehouse_homepage_director.html
+++ b/client/src/pages/warehouse/warehouse_homepage_director.html
@@ -209,7 +209,7 @@
                     <label class="col-1 col-form-label">Informazioni Prodotto</label>
 
                     <div class="row col-11">
-                        <div class="form-group col no-gutters">
+                        <div class="form-group col-2 no-gutters">
                             <label class="col-12 col-form-label" for="prod_code">Codice Prodotto</label>
                             <div class="col-12">
                                 <div class="input-group">
@@ -224,7 +224,7 @@
                             </div>
                         </div>
 
-                        <div class="form-group col no-gutters">
+                        <div class="form-group col-2 no-gutters">
                             <label for="prod_variant" class="col-12 col-form-label">Variante Prodotto</label>
                             <div class="col-12">
                                 <div class="input-group">
@@ -239,7 +239,7 @@
                                 <span id="prod_variantHelpBlock" class="form-text text-muted">Variante specifica dell'articolo selezionato</span>
                             </div>
                         </div>
-                        <div class="form-group col no-gutters">
+                        <div class="form-group col-8 no-gutters">
                             <label class="col-12 col-form-label" for="prod_name">Descrizione Prodotto</label>
                             <div class="col-12">
                                 <div class="input-group">
